<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/placeholder_tomorrow_oct_31"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/weather_iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/cloud_circle"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_gravity="center"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/precip_type_rain_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/water_droplet"
            android:contentDescription="@string/water_drouplet"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/precip_type_snow_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/snowflake"
            android:contentDescription="@string/snowflake"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/precip_type_freezingrain_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/freezing_rain"
            android:contentDescription="@string/freezing_rain"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/precip_type_ice_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ice"
            android:contentDescription="@string/ice"
            android:visibility="gone"/>


    </LinearLayout>

    <TextView
        android:id="@+id/temp_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_weight="0.3"
        android:textColor="@color/black"
        android:gravity="end"
        android:text="@string/placeholder_12_6_c" />


</LinearLayout>