<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/placeholder_10_00_pm"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/weather_iv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/cloud_circle"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/temp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/placeholder_11_c"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>