<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_blue_op50">

    <ImageView
        android:id="@+id/weather_iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:padding="12dp"
        android:src="@drawable/clear_night"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_iv"
        app:layout_constraintStart_toEndOf="@+id/weather_iv"
        app:layout_constraintTop_toTopOf="@+id/weather_iv">

        <TextView
            android:id="@+id/temperature_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:text="@string/palceholder_23_c_light_intensity_drizzle" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_london"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_location"
            app:drawableTint="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>